3/manifests/oncall/ingress.yaml

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oncall-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: oncall.st-ab1-fadeev.ingress.sre-ab.ru
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: oncall
                port:
                  number: 8080
